# data-center-classification

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
data/raw/: Data_Centers_Database - FracTracker Data Centers.csv
docs/: README.md
docs/adr/: 0001-python-environment.md  0002-gis-stack.md  0003-geographic-scope.md  0004-data-storage-strategy.md  0005-spatial-unit-of-analysis.md  0006-data-center-dataset.md  0007-classification-target.md  0008-mce-weighting.md  README.md  template.md
notebooks/: README.md
notebooks/models/: random_forest_model.pkl  scaler.pkl
notebooks/outputs/: feature_importance.csv  model_summary.txt
