[project]
name = "data-center-classification"
version = "0.0.0"
description = "Classify US data center sites by social and environmental risk."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.1.3",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyproj>=3.7.2",
    "scikit-learn>=1.8.0",
    "shapely>=2.1.2",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
